[package]
name = "lg-res"
version = "0.1.0"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
description = "Support for Looking Glass RES archives."
repository = "https://github.com/FaultyRAM/lg-res"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[dependencies.bitflags]
version = "1"

[dependencies.clippy]
version = "0.0"
optional = true

[dependencies.failure]
version = "0.1"

[features]
default = []
nightly = ["clippy"]
